# voxlm

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_model_loss.py
configs/: base.yaml  custom.example.yaml  voxlm-2b.yaml  voxlm-9b-global.yaml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: ARCHITECTURE.md  DEEP_RESEARCH.md  GETTING_STARTED.md  JOURNEY.md  LESSONS_LEARNED.md  MANUAL_TRAINING.md
hf/: .gitkeep
models/voxlm-2b/: README.md
scripts/: build_hf.py  download_data.py  evaluate.py  generate_timestamps.py  inference.py  quick_train.sh  test_local.py  train.py  train_with_timestamps.py  upload_to_hf.py
src/: __init__.py  alignment.py  audio_encoder.py  config.py  heads.py  model.py
tests/: test_tokenizer.py
